--- a/home/.emacs.d/config.org
+++ b/home/.emacs.d/config.org
@@ -2,9 +2,13 @@
 #+OPTIONS: toc:2 num:nil ^:nil
 
 * Introduction
+
 Welcome to my emacs config!
+
 * Prelude
+
 First, let's take care of some startup stuff.
+
 ** Remove the startup message
 
 I don't like the startup message, so let's get rid of it.
@@ -26,6 +30,7 @@ Let's set ~custom-file~, which emacs writes to automatically.
 
 #+END_SRC
 * Packages
+
 ** Set up ~package.el~
 
 #+BEGIN_SRC emacs-lisp
@@ -40,6 +45,7 @@ Let's set ~custom-file~, which emacs writes to automatically.
 (package-initialize)
 
 #+END_SRC
+
 ** Install ~use-package~
 
 ~use-package~ is used for the rest of the config. It lets me define installable packages and configure them in the same block.
@@ -57,6 +63,7 @@ Let's set ~custom-file~, which emacs writes to automatically.
 
 #+RESULTS:
 : diminish
+
 ** Install ~diminish~
 
 We also install ~diminish~, because ~use-package~ depends on it. ~diminish~ lets you hide minor modes from the mode-line.
@@ -70,7 +77,6 @@ We also install ~diminish~, because ~use-package~ depends on it. ~diminish~ lets
 
 #+END_SRC
 
-Now, we explicitly load some modes that are en
 Now, we diminish some modes (I can't figure out where they are loaded):
 
 #+BEGIN_SRC emacs-lisp
@@ -100,7 +106,9 @@ Brought to you by Paradox:
 #+RESULTS:
 
 * General Configuration
+
 Let's configure the editor to our liking.
+
 ** Symlinks
 
 Follow symlinks without prompting me.
@@ -110,7 +118,9 @@ Follow symlinks without prompting me.
   (setq vc-follow-symlinks t)
 
 #+END_SRC
+
 ** Ignore files
+
 Life's too short to see this many files in dired / projectile / etc.
 
 #+BEGIN_SRC emacs-lisp
@@ -124,6 +134,7 @@ Life's too short to see this many files in dired / projectile / etc.
 
 #+RESULTS:
 : t
+
 ** Use org for the scratch buffer
 
 #+BEGIN_SRC emacs-lisp
@@ -251,6 +262,7 @@ This sets up emacs to inherit commands from ~$PATH~. Without it, some commands t
 : t
 
 ** Make gpg-agent work
+
 This function will load ~/.gpg-agent-info and source its contents into ~GPG_AGENT_INFO~.
 
 I need this to pull mail for m4ue.
@@ -280,6 +292,7 @@ I need this to pull mail for m4ue.
 
 ** Theme
 *** Change the Mode Line
+
 This mode line is pretty.
 
 #+BEGIN_SRC emacs-lisp 
@@ -299,7 +312,7 @@ This mode line is pretty.
 
 *** Change the theme
 
-The "Monokai" themes look great in emacs and a terminal.
+The "Monokai" themes look great.
 
 #+BEGIN_SRC emacs-lisp 
 
@@ -345,66 +358,103 @@ It's commented out right now because it looks terrible.
 
 #+RESULTS:
 
-* Helm
-** TODO organize this
+* UI
+** Ivy
 
 #+BEGIN_SRC emacs-lisp 
 
-  ;;;; Helm
+    (use-package ivy
+      :ensure t
+      :config
+      (ivy-mode 1)
 
-  (use-package helm
-    :ensure t
-    :diminish helm-mode
-    :config
+      (setq ivy-use-virtual-buffers t)
+      (setq ivy-virtual-abbreviate 'full)
+      (setq ivy-height 30)
+      (setq ivy-count-format "(%d/%d) ")
+      (setq ivy-display-style 'plain)
+  
+      (use-package flx
+        :ensure t)
 
-    (require 'helm-config)
-    (require 'helm-locate)
+      ;; Enable fuzzy searching
+      (setq ivy-initial-inputs-alist nil)
+      (setq ivy-re-builders-alist
+            '((t . ivy--regex-fuzzy)))
 
-    ;; The default "C-x c" is quite close to "C-x C-c", which quits Emacs.
-    ;; Changed to "C-c h". Note: We must set "C-c h" globally, because we
-    ;; cannot change `helm-command-prefix-key' once `helm-config' is loaded.
-    (global-set-key (kbd "C-c h") 'helm-command-prefix)
-    (global-unset-key (kbd "C-x c"))
+      (use-package counsel
+        :ensure t)
 
-    ;; Use helm for finding files
-    (global-set-key (kbd "C-x C-f") 'helm-find-files)
+      (use-package swiper
+        :ensure t)
 
-    (setq helm-split-window-in-side-p           t ; open helm buffer inside current window
-          helm-move-to-line-cycle-in-source     t ; move to end or beginning of source when reaching top or bottom of source.
-          helm-ff-search-library-in-sexp        t ; search for library in `require' and `declare-function' sexp.
-          helm-scroll-amount                    8 ; scroll 8 lines other window using M-<next>/M-<prior>
-          helm-ff-file-name-history-use-recentf t)
+      (use-package ivy-hydra
+        :ensure t)
 
-    ;; Use helm for M-x
-    (global-set-key (kbd "M-x") 'helm-M-x)
+      (global-set-key (kbd "C-s") 'swiper)
+      (global-set-key (kbd "M-x") 'counsel-M-x)
+      (global-set-key (kbd "C-x C-f") 'counsel-find-file)
+      (global-set-key (kbd "<f1> f") 'counsel-describe-function)
+      (global-set-key (kbd "<f1> v") 'counsel-describe-variable)
+      (global-set-key (kbd "<f1> l") 'counsel-load-library)
+      (global-set-key (kbd "<f2> i") 'counsel-info-lookup-symbol)
+      (global-set-key (kbd "<f2> u") 'counsel-unicode-char)
 
-    ;; Use helm to show the kill ring
-    (global-set-key (kbd "M-y") 'helm-show-kill-ring)
 
-    ;; Use helm for buffer list
-    (global-set-key (kbd "C-x b") 'helm-mini)
+      ;; The following functions taken from https://github.com/fgeller/emacs.d/blob/master/ivy.el, which deserves a closer look.
 
-    ;; Use helm for apropos
-    (global-set-key (kbd "C-h a") 'helm-apropos)
-    
-    ;; Don't cut off filenames
-    (setq helm-buffer-max-length nil)
+      (defun add-ivy-action (str action)
+        "Adds ACTION as text-property to start of STR"
+        (put-text-property 0 1 'ivy-action action str))
 
-    (helm-mode 1))
+      (defun get-ivy-action (str)
+        "Returns text-property `ivy-action' at start of STR"
+        (get-text-property 0 'ivy-action str))
 
-  (use-package helm-ag
-    :ensure t)
 
-  (use-package helm-projectile
-    :ensure t
-    :config
-    (helm-projectile-on))
+      (defun string-copy (str)
+        "Uses `substring' to return a copy of STR without text properties"
+        (substring str 0 (length str)))
 
-  (use-package helm-mu
-    :ensure t)
+      (defun ivy-apropos-candidates ()
+        (let ((start-time (current-time))
+              cs)
+          (mapatoms
+           (lambda (e)
+             (cond
+              ((fboundp e)
+               (let ((c (string-copy (symbol-name e))))
+                 (add-ivy-action c 'describe-function)
+                 (push c cs)))
+              ((or (get e 'variable-documentation)
+                   (and (boundp e) (not (keywordp e))))
+               (let ((c (string-copy (symbol-name e))))
+                 (add-ivy-action c 'describe-variable)
+                 (push c cs))))))
+          cs))
+
+      (defun ivy-apropos ()
+        "apropos interface for ivy."
+        (interactive)
+        (ivy-read "Describe: " (ivy-apropos-candidates)
+                  :initial-input (thing-at-point 'symbol)
+                  :action (lambda (s) (funcall (get-ivy-action s) (intern s)))))
+ 
+      ;; These ones are my own:
+
+
+      (defun counsel-projectile-ag ()
+        (interactive)
+        (counsel-ag nil (projectile-project-root)))
+
+
+      (global-set-key (kbd "C-h a") 'ivy-apropos)
+      (global-set-key (kbd "M-y") 'counsel-yank-pop))
+
 
 #+END_SRC
 #+RESULTS:
+: t
 
 * Keybindings
 ** General keybindings
@@ -449,6 +499,9 @@ It's commented out right now because it looks terrible.
 
     (define-key evil-normal-state-map "f" 'avy-goto-word-or-subword-1)
 
+    ;; Use swiper for search
+    (define-key evil-normal-state-map "/" 'swiper)
+
     (evil-mode 1)
 
     (use-package evil-surround
@@ -471,29 +524,35 @@ It's commented out right now because it looks terrible.
 
       (evil-leader/set-leader "SPC")
 
-      (evil-leader/set-key "x" 'helm-M-x)
-      (evil-leader/set-key "f" 'helm-find-files)
+      (evil-leader/set-key "x" 'counsel-M-x)
+      (evil-leader/set-key "f" 'counsel-find-file)
 
       ;; Buffer
-      (evil-leader/set-key "b" 'helm-mini)
+      (evil-leader/set-key "b" 'ivy-switch-buffer)
       (evil-leader/set-key "k" 'kill-this-buffer)
       (evil-leader/set-key "w" 'save-buffer)
       (evil-leader/set-key "q" 'delete-window)
-  
+
       (evil-leader/set-key "|" 'split-window-right-and-focus)
       (evil-leader/set-key "-" 'split-window-below-and-focus)
 
       ;; Projects
-      (evil-leader/set-key "pp" 'helm-projectile-switch-project)
-      (evil-leader/set-key "pf" 'helm-projectile-find-file)
-      (evil-leader/set-key "pa" 'helm-projectile-ag)
+      (evil-leader/set-key "pp" 'projectile-switch-project)
+      (evil-leader/set-key "pf" 'projectile-find-file)
+      (evil-leader/set-key "pa" 'counsel-projectile-ag)
+    
+      ;; Ivy
+    
+      ;; Resume the last Ivy completion
+      (evil-leader/set-key "ir" 'ivy-resume)
+
 
       ;; Config edit
       (evil-leader/set-key "ce" (lambda () (interactive) (find-file "~/.emacs.d/config.org")))
 
       ;; Git
       (evil-leader/set-key "g" 'magit-status)
-  
+
       ;; Ace window
       ;; This keybinding matches "f" in normal mode for avy, in terms 
       ;; of hand placement.
@@ -520,7 +579,7 @@ Projectile lets me switch between projects really easily. I set it up to default
     :config
     (setq projectile-enable-caching t)
     (projectile-global-mode)
-    (setq projectile-completion-system 'helm)
+    (setq projectile-completion-system 'ivy)
     (setq projectile-switch-project-action 'projectile-commander)
 
     ;; Clear out all commander commands but the help item.
@@ -535,7 +594,7 @@ Projectile lets me switch between projects really easily. I set it up to default
 
     (def-projectile-commander-method ?a
       "Full text search in the project."
-      (helm-projectile-ag))
+      (counsel-projectile-ag))
 
     (def-projectile-commander-method ?e
       "Open an [e]shell in the project root."
@@ -543,7 +602,7 @@ Projectile lets me switch between projects really easily. I set it up to default
 
     (def-projectile-commander-method ?f
       "Find files in the project."
-      (helm-projectile-find-file))
+      (projectile-find-file))
 
     (def-projectile-commander-method ?g
       "Open project root in magit"
@@ -553,6 +612,7 @@ Projectile lets me switch between projects really easily. I set it up to default
 
 #+RESULTS:
 | 63 | Commander help buffer. | #[0 \302\303\304D\305\303\306\302EDC\217\210r\307!q\210\310c\210        \311\203@ @\211\211A\262\242\211A\262\242@\312\313#c\266\211T\262A\262\202 \266eb\210\314 \210\315p\316"\210)\317 \207 [projectile-commander-help-buffer projectile-commander-methods err funcall #[0 \301!\207 [projectile-commander-help-buffer kill-buffer] 2 |
+
 
 ** Avy
 Avy lets me jump around buffers and windows with hints.
@@ -617,8 +677,8 @@ Install Jorgen Schaefer's ~tdd~ library, which lets me auto-run tests when a buf
 **** Open GitHub from Helm
 #+BEGIN_SRC emacs-lisp 
 
-(use-package helm-open-github
-  :ensure t)
+;;(use-package helm-open-github
+;;  :ensure t)
 
 #+END_SRC
 
@@ -856,7 +916,6 @@ Fish is my default shell in the terminal, but it doesn't work well in emacs, sin
     :ensure t)
 #+END_SRC
 
-
 * Org Mode
 I use Org Mode to take notes for work and personal.
 
@@ -1068,8 +1127,8 @@ helm-org-rifle lets me search through open org files really quickly.
 
 #+BEGIN_SRC emacs-lisp 
 
-(use-package helm-org-rifle
-  :ensure t)
+;;(use-package helm-org-rifle
+;;  :ensure t)
 
 #+END_SRC
 ** JIRA
