feat(modeline): Diplay time in modeline

--- a/home/.emacs.d/config.org
+++ b/home/.emacs.d/config.org
@@ -309,6 +309,14 @@ This mode line is pretty.
 : t
 
 #+RESULTS:
+*** Display time in modeline
+
+#+BEGIN_SRC emacs-lisp
+(display-time-mode 1)
+#+END_SRC
+
+#+RESULTS:
+: t
 
 *** Change the theme
 
