--- a/home/.emacs.d/config.org
+++ b/home/.emacs.d/config.org
@@ -499,96 +499,123 @@ It's commented out right now because it looks terrible.
 
 #+BEGIN_SRC emacs-lisp 
 
-  (defun split-window-right-and-focus ()
-    (interactive)
-    (split-window-right)
-    (other-window 1))
+    (defun split-window-right-and-focus ()
+      (interactive)
+      (split-window-right)
+      (other-window 1))
 
-  (defun split-window-below-and-focus ()
-    (interactive)
-    (split-window-below)
-    (other-window 1))
+    (defun split-window-below-and-focus ()
+      (interactive)
+      (split-window-below)
+      (other-window 1))
 
-  (use-package evil
+    (use-package evil
+      :ensure t
+      :diminish evil-mode
+      :diminish undo-tree-mode
+      :init
+      ;; (setq evil-want-C-u-scroll t)
+      :config
+      ;; Make movement keys work over visual lines
+      (define-key evil-normal-state-map (kbd "<remap> <evil-next-line>") 'evil-next-visual-line)
+      (define-key evil-normal-state-map (kbd "<remap> <evil-previous-line>") 'evil-previous-visual-line)
+      (define-key evil-motion-state-map (kbd "<remap> <evil-next-line>") 'evil-next-visual-line)
+      (define-key evil-motion-state-map (kbd "<remap> <evil-previous-line>") 'evil-previous-visual-line)
+      ;; Make horizontal movement cross lines               
+      (setq-default evil-cross-lines t)
+
+      (define-key evil-normal-state-map "f" 'avy-goto-word-or-subword-1)
+      (define-key evil-normal-state-map (kbd "C-k") (lambda ()
+                                                      (interactive)
+                                                      (evil-scroll-up nil)))
+      (define-key evil-normal-state-map (kbd "C-j") (lambda ()
+                                                      (interactive)
+                                                      (evil-scroll-down nil)))
+
+
+      ;; Use swiper for search
+      (define-key evil-normal-state-map "/" 'swiper)
+
+      (evil-mode 1)
+
+      (use-package evil-surround
+        :ensure t
+        :diminish evil-surround-mode
+        :config
+        (global-evil-surround-mode 1))
+
+      (use-package evil-magit
+        :ensure t)
+
+      (use-package evil-matchit
+        :ensure t
+        :config
+        (global-evil-matchit-mode 1)))
+
+#+END_SRC
+
+#+RESULTS:
+: t
+
+** General
+
+General.el is like evil-leader, but lets you define multiple leader keys / prefixes.
+
+#+BEGIN_SRC emacs-lisp
+  (use-package general
     :ensure t
-    :diminish evil-mode
-    :diminish undo-tree-mode
-    :init
-    (setq evil-want-C-u-scroll t)
     :config
-    ;; Make movement keys work over visual lines
-    (define-key evil-normal-state-map (kbd "<remap> <evil-next-line>") 'evil-next-visual-line)
-    (define-key evil-normal-state-map (kbd "<remap> <evil-previous-line>") 'evil-previous-visual-line)
-    (define-key evil-motion-state-map (kbd "<remap> <evil-next-line>") 'evil-next-visual-line)
-    (define-key evil-motion-state-map (kbd "<remap> <evil-previous-line>") 'evil-previous-visual-line)
-    ;; Make horizontal movement cross lines               
-    (setq-default evil-cross-lines t)
+    (setq general-default-keymaps 'evil-normal-state-map)
 
-    (define-key evil-normal-state-map "f" 'avy-goto-word-or-subword-1)
+    (general-define-key :prefix "SPC b"
+                        "" '(:ignore t :which-key "buffers")
+                        "b" 'ivy-switch-buffer
+                        "k" 'kill-this-buffer
+                        "q" 'delete-window)
 
-    ;; Use swiper for search
-    (define-key evil-normal-state-map "/" 'swiper)
+    (general-define-key :prefix "SPC w"
+                        "" '(:ignore t :which-key "windows")
+                        "j" 'ace-window)
 
-    (evil-mode 1)
+    (general-define-key :prefix "SPC"
+                        "|" 'split-window-right-and-focus
+                        "-" 'split-window-below-and-focus)
 
-    (use-package evil-surround
-      :ensure t
-      :diminish evil-surround-mode
-      :config
-      (global-evil-surround-mode 1))
+    (general-define-key :prefix "SPC"
+                        "g" 'magit-status)
 
-    (use-package evil-magit
-      :ensure t)
+    (general-define-key :prefix "SPC"
+                        "x" 'counsel-M-x)
 
-    (use-package evil-matchit
-      :ensure t
-      :config
-      (global-evil-matchit-mode 1))
+    (general-define-key :prefix "SPC l"
+                        "" '(nil :which-key "layout")
+                        "s" 'ivy-push-view
+                        "d" 'ivy-pop-view)
 
-    (use-package evil-leader
-      :ensure t
-      :config
+    (general-define-key :prefix "SPC i"
+                        "" '(nil :which-key "ivy")
+                        "r" 'ivy-resume)
 
-      (evil-leader/set-leader "SPC")
+    (general-define-key :prefix "SPC c"
+                        "" '(nil :which-key "config")
+                        "e" '(:which-key "edit-config"
+                                         :command (lambda () (interactive) (find-file "~/.emacs.d/config.org"))))
 
-      (evil-leader/set-key "x" 'counsel-M-x)
-      (evil-leader/set-key "f" 'counsel-find-file)
+    ;; Help
+    (general-define-key :prefix "SPC"
+                        "h" (general-simulate-keys "C-h"))
 
-      ;; Buffer
-      (evil-leader/set-key "b" 'ivy-switch-buffer)
-      (evil-leader/set-key "k" 'kill-this-buffer)
-      (evil-leader/set-key "w" 'save-buffer)
-      (evil-leader/set-key "q" 'delete-window)
+    (general-define-key :prefix "SPC f"
+                        "" '(:ignore t :which-key "files")
+                        "f" 'counsel-find-file
+                        "s" 'save-buffer)
 
-      (evil-leader/set-key "|" 'split-window-right-and-focus)
-      (evil-leader/set-key "-" 'split-window-below-and-focus)
-
-      ;; Projects
-      (evil-leader/set-key "pp" 'projectile-switch-project)
-      (evil-leader/set-key "pf" 'projectile-find-file)
-      (evil-leader/set-key "pa" 'counsel-projectile-ag)
-    
-      ;; Ivy
-    
-      ;; Resume the last Ivy completion
-      (evil-leader/set-key "ir" 'ivy-resume)
-
-
-      ;; Config edit
-      (evil-leader/set-key "ce" (lambda () (interactive) (find-file "~/.emacs.d/config.org")))
-
-      ;; Git
-      (evil-leader/set-key "g" 'magit-status)
-
-      ;; Ace window
-      ;; This keybinding matches "f" in normal mode for avy, in terms 
-      ;; of hand placement.
-      (evil-leader/set-key "j" 'ace-window)
-      (global-set-key (kbd "M-j") 'ace-window)
-
-      (setq evil-leader/in-all-states 1)
-      (global-evil-leader-mode)))
-
+    (general-define-key :prefix "SPC p"
+                        "" '(:ignore t :which-key "projects")
+                        "p" 'projectile-switch-project
+                        "f" 'projectile-find-file
+                        "a" 'counsel-projectile-ag
+                        "t" 'projectile-test-project))
 #+END_SRC
 
 #+RESULTS:
@@ -614,6 +641,14 @@ Projectile lets me switch between projects really easily. I set it up to default
     ;; (delete-if (lambda (el)
     ;;              (member (car el) '(?d ?a ?g)))
     ;;            projectile-commander-methods)
+  
+
+    ;; Use ag instead of projectile's default of find.
+    ;; This lets me use .agignore files instead of projectile's
+    ;; ignore file, which has never worked successfully for me.
+    (setq projectile-generic-command
+          (concat "ag -0 -l --nocolor"
+                  (mapconcat #'identity (cons "" projectile-globally-ignored-directories) " --ignore-dir=")))
 
     (def-projectile-commander-method ?d
       "Open project root in dired"
@@ -1043,7 +1078,10 @@ I can type timestamped notes for a given tree with ~C-c C-z~. By default, they a
 #+BEGIN_SRC emacs-lisp 
 
   (defun my/org-mode-keyboard-shortcuts ()
-    (evil-leader/set-key-for-mode 'org-mode
+    (general-define-key
+     :states '(normal)
+     :keymaps 'org-mode-map
+     :prefix "SPC"
       "*" 'org-ctrl-c-star
       "a" 'org-agenda
       "ih" 'org-insert-heading-after-current-and-enter-insert
